--- a/paragon/_overrides.scss
+++ b/paragon/_overrides.scss
@@ -2,11 +2,11 @@
 // This file is included after all Paragon styles, but should generally avoid using private mixins in Paragon.
 
 #root {
-  header {
-    height: 58pt !important;
+  header.site-header-desktop {
     .logo {
       img {
-        height: 40px !important;
+        height: 34px;
+        margin: 0;
       }
     }
   }
